# nus-client

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/nus_client/: __init__.py  __main__.py  cli.py  client.py  interactive.py  pty_bridge.py
tests/: test_cli.py
