[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nus-client"
dynamic = ["version"]
description = "BLE Nordic UART Service (NUS) client — interactive terminal and PTY bridge"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Will" }]
keywords = ["ble", "bluetooth", "nordic", "uart", "nus", "serial", "pty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: Terminals :: Serial",
]
dependencies = ["simplepyble>=0.9"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
nus-client = "nus_client.cli:main"

[project.urls]
Homepage = "https://github.com/will-tm/nus-client"
Issues = "https://github.com/will-tm/nus-client/issues"

[tool.hatch.version]
path = "src/nus_client/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nus_client"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
